--- a/index.html
+++ b/index.html
@@ -11,4 +11,11 @@
   <noscript>This quiz requires JavaScript.</noscript>
   <script src="app.js"></script>
 </body>
+<script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("4e05gESRCcXdlqDkI"); // same publicKey
+  })();
+</script>
+
 </html>
