Update Public Key

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script>
   (function(){
     emailjs.init({
-      publicKey: "4e05gESRCcXdlqDkI"
+      publicKey: "YoOVqMfQaR_h1LIj6"
     });
   })();
 </script>
