Updating Json files

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <!-- Logo -->
   <header style="text-align:center; margin: 1em 0;">
-    <img src="acc_logo.png" alt="ACC Logo" style="max-height:80px;" />
-    <h1>GAME1270 Quiz #1</h1>
+    <img src="acc_logo.png" alt="ACC Logo" style="max-width: 100%; height: auto;" />
+    <h1 id="quiz-title">GAME1270 Quiz #1</h1>
   </header>
 
   <!-- Quiz root -->
