--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz App</title>
+  <title>GAME1270 Quiz</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="login-container">
-    <h2>Login</h2>
-    <input type="text" id="username" placeholder="Enter username" />
-    <button onclick="login()">Login</button>
-  </div>
+  <noscript>This quiz requires JavaScript.</noscript>
+  <div id="app"></div>
 
-  <div id="quiz-container" class="hidden">
-    <h2 id="quiz-title">Quiz</h2>
-    <form id="quiz-form"></form>
-    <button onclick="submitQuiz()">Submit Quiz</button>
-    <div id="results"></div>
-  </div>
-
+  <!-- Load scripts in dependency order -->
+  <script src="state.js"></script>
+  <script src="utils.js"></script>
+  <script src="auth.js"></script>          
+  <script src="render-matching.js"></script>
+  <script src="render-tf.js"></script>
+  <script src="grading.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
