Render matching pictures

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Renderers for each question type -->
   <script src="render-matching.js"></script>
   <script src="render-tf.js"></script>
+  <script src="render-matching-pictures.js"></script>
 
   <!-- Grading + quiz app -->
   <script src="grading.js"></script>
