adding mc questions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="render-matching.js"></script>
   <script src="render-tf.js"></script>
   <script src="render-matching-pictures.js"></script>
+  <script src="render-mc.js"></script>
 
   <!-- Grading + quiz app -->
   <script src="grading.js"></script>
