--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="render-tf.js"></script>
   <script src="render-matching-pictures.js"></script>
   <script src="render-mc.js"></script>
+  <script src="render-fill-in-the-blank.js"></script>
 
   <!-- Grading + quiz app -->
   <script src="grading.js"></script>
