--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <script src="render-matching-pictures.js"></script>
   <script src="render-mc.js"></script>
   <script src="render-fill-in-the-blank.js"></script>
+  <script src="render-fill-in-the-list.js"></script>
+
 
   <!-- Grading + quiz app -->
   <script src="grading.js"></script>
