--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="render-matching-pictures.js"></script>
   <script src="render-mc.js"></script>
   <script src="render-fill-in-the-blank.js"></script>
-  <script src="render-fill-in-the-list.js"></script>
+  <script src="render-fill-in-the-blank-list.js"></script>
 
 
   <!-- Grading + quiz app -->
