Add render-short-answer to index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="render-mc.js"></script>
   <script src="render-fill-in-the-blank.js"></script>
   <script src="render-fill-in-the-blank-list.js"></script>
+  <script src="render-short-answer.js"></script>
 
 
   <!-- Grading + quiz app -->
